# router-software

./: .gitignore  DEVELOPMENT.md  Doxyfile  LICENSE  README.md  RS485_PROTOCOL.md
.github/workflows/: ci.yml  release.yml
Programs/: connect-serial-port.cmd  multicast-console.cmd
Programs/dcsbios-serial-bridge/: .gitignore  CMakeLists.txt  README.md  build-package.cmd  known-bugs.md  make-installer.cmd  next-session-plan.txt  quick-start.cmd  serial-monitor.py  setup-imgui.cmd  test-virtual-com.cmd
Programs/dcsbios-serial-bridge/lua/: HornetLinkExport.lua
Programs/dcsbios-serial-bridge/lua/modules/: FA-18C.lua
Programs/dcsbios-serial-bridge/src/: BiosProtocol.hpp  ControlDatabase.hpp  DcsBiosSource.hpp  DcsDirectSource.hpp  DeviceRegistry.hpp  MsfsSource.hpp  ProfileStore.hpp  RS485ProtocolSpec.hpp  ReplayFileSource.hpp  SimSource.hpp  main.cpp  main_imgui.cpp
Programs/dcsbios-serial-bridge/templates/: panels.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  FIRMWARE_GUIDE.md  INCOMPLETE_ITEMS.md  PROTOCOL_REFERENCE.md  RELEASE_PROCESS.md  RESUME_GUIDE.md
libraries/HornetLink/: HornetLink.h  library.properties
libraries/HornetLink/src/: HornetLinkBase.h  HornetLinkCompatDcsBios.h  HornetLinkImport.h  HornetLinkMaster.h  HornetLinkMode.h  HornetLinkSlave.h
sketches/sketch_esp32_master/: sketch_esp32_master.ino
sketches/sketch_mega2560_master/: sketch_mega2560_master.ino
sketches/sketch_pro_micro_slave/: sketch_pro_micro_slave.ino
tests/: CMakeLists.txt  test-plan.yaml  test_delta_frame.cpp  test_handshake.cpp  test_main.cpp  test_protocol_parse.cpp  test_rs485_frames.cpp  test_runner.cpp
